example/test/app-repo/k8s/1_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    shared-gateway-access: "true"
    istio.io/rev: asm-managed
