example/test/app-repo/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx
spec:
  parentRefs:
  - kind: Gateway
    name: istio-gateway
    namespace: gateways
  rules:
  - backendRefs:
    - kind: Service
      name: nginx-service
      port: 80
